[package]
name = "rust-usb-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bluetooth_le_controller"
path = "src/bin/bluetooth_le_controller.rs"

[dependencies]
bpaf = { version = "0.7.4", features = ["autocomplete", "derive"] }
rusb = "0.9.1"
